# pathosphere

./: .env.example  .gitignore  CRITICAL_POINTS.md  HANDOFF.md  LOOP_STATE.md  README.md  claude.md  install_caveman.md  next_steps.md  pyproject.toml  useful_queries.sql
.github/workflows/: ci.yml
docs/: architecture.md  data-semantics.md  decisions.md  embeddings-caveat.md  firms-refactor-report.md  overview_per_amico.md  roadmap.md  schema.md  wiki.md
notebooks/: study_01_embed.ipynb  study_02_extract.ipynb  study_03_graph.ipynb  study_04_post_fix_verification.ipynb  study_05_post_fix_embed.ipynb  study_06_post_fix_entities.ipynb  study_07_post_fix_graph.ipynb  study_08_gdelt_post_reingest.ipynb  study_09_criticality_audit.ipynb  study_10.ipynb  study_10_clustering_robustness.ipynb  study_11.ipynb  study_11_theses_predictions.ipynb  study_11_theses_predictions_quality.ipynb  study_12.ipynb  study_12_trading.ipynb  study_12_trading_validation.ipynb  study_13_cluster_cap_analysis.ipynb  study_14_complete_linkage_verification.ipynb  study_15_visual_tour.ipynb  study_16_cp018_cp019_verification.ipynb  study_17_post_fix_entity_graph.ipynb  study_18_story_linking_cp021.ipynb  study_19_rss_event_geolocation.ipynb
notebooks/.ipynb_checkpoints/: study_08_gdelt_post_reingest-checkpoint.ipynb
pathosphere/: __init__.py  cli.py  config.py  doctor.py  logging_setup.py
pathosphere/agent/: __init__.py  approval.py  brief.py  debate.py  predictions.py  scenarios.py  thesis.py
pathosphere/cycle/: loop.py  orchestrator.py
pathosphere/dashboard/: __init__.py  app.py  db.py
pathosphere/dashboard/views/: briefs.py  entity_graph.py  map_view.py  narratives.py  overview.py  portfolios.py  predictions.py  scenarios.py  theses.py
pathosphere/db/: schema.py
pathosphere/export/: parquet.py
pathosphere/ingest/: anomaly.py  comtrade.py  econ_crises.py  gdelt.py  gdelt_anomaly.py  ioda.py  physical.py  portwatch.py  reliefweb.py  rss.py  sources_seed.py  tor_proxy.py  ucdp.py  who_don.py
pathosphere/llm/: __init__.py  client.py
pathosphere/market/: fundamentals.py  prices.py  technicals.py  trading.py
pathosphere/semantic/: __init__.py  cluster.py  dedup.py  embedder.py  extract.py  graph.py  story.py
scripts/: run_pipeline.sh  setup_launchd.sh
tests/: conftest.py  test_anomaly.py  test_brief.py  test_comtrade.py  test_cycle_loop.py  test_db.py  test_debate.py  test_doctor.py  test_extract.py  test_fundamentals.py  test_gdelt.py  test_gdelt_anomaly.py  test_graph.py  test_historical_sources.py  test_ioda.py  test_launchd_setup.py  test_llm_client.py  test_orchestrator.py  test_parquet.py  test_physical.py  test_portwatch.py  test_predictions.py  test_prices.py  test_scenarios.py  test_semantic.py  test_story.py  test_technicals.py  test_thesis.py  test_thesis_approval.py  test_trading.py
