[project]
name = "pathosphere"
version = "0.1.0"
description = "OSINT portal — intelligence personale su eventi critici globali"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1",
    "httpx>=0.27",
    "tenacity>=8.0",
    "caveman>=1.0",
]

[project.scripts]
pathos = "pathosphere.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pathosphere"]
