[project]
name = "pathosphere"
version = "0.1.0"
description = "OSINT portal — intelligence personale su eventi critici globali"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1",
    "httpx>=0.27",
    "tenacity>=8.0",
    "feedparser>=6.0",
    "sentence-transformers>=2.0",
    "numpy>=1.26",
    "caveman>=1.0",
    "spacy>=3.7",
    "xx-ent-wiki-sm",
]

[project.scripts]
pathos = "pathosphere.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["pathosphere"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
xx-ent-wiki-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl" }
