[project]
name = "pathosphere"
version = "0.1.0"
description = "OSINT portal — intelligence personale su eventi critici globali"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1",
    "httpx[socks]>=0.27",
    "tenacity>=8.0",
    "feedparser>=6.0",
    "sentence-transformers>=2.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "caveman>=1.0",
    "spacy>=3.7",
    "xx-ent-wiki-sm",
    "yfinance>=1.4.1",
    "bleach>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "streamlit>=1.59.1",
    "plotly>=6.9.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.27.2",
]

[project.scripts]
pathos = "pathosphere.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# notebooks/ = record storici delle indagini (non si riscrivono a posteriori);
# .agents/ = script vendored delle skill caveman, non codice del progetto.
extend-exclude = ["notebooks", ".agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["pathosphere"]

[dependency-groups]
dev = [
    "diptest>=0.11.0",
    "pytest>=9.0.3",
]

[tool.uv.sources]
xx-ent-wiki-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl" }
